Fix rsvp window z-index

--- a/css/main.css
+++ b/css/main.css
@@ -767,7 +767,7 @@ html {
   left: 400px;
   top: 258px;
   height: 100px;
-  z-index: 100; }
+  z-index: 12; }
 
 .window-countdown {
   left: 600px;
