--- a/sass/_window.scss
+++ b/sass/_window.scss
@@ -73,7 +73,7 @@
 	left: 400px;
 	top: 258px;
 	height: 100px;
-	z-index: 100;
+	z-index: 12;
 }
 
 .window-countdown {
